# input-phone2pc

./: .gitignore  CHANGELOG.md  LICENSE  MEMORY_LEAK_FIX.md  MEMORY_LEAK_FIX_COMPLETE.md  POWERSHELL7_SETUP.md  PROJECT_IMPROVEMENTS.md  README.md  README.zh-CN.md  build.ps1  deploy-server.ps1  start-project-services.ps1  stop-project-services.ps1  test_local_wss.py  test_wss.py  test_wss_protocol.py
.github/: copilot-instructions.md
.github/workflows/: README.md  build-all.yml  build-file-qr-gui.yml  desktop-build.yml  quick-build.yml
VoiceInputApp/: HISTORY_FEATURE.md  build.gradle.kts  generate_android_icons.py  gradle.properties  key  settings.gradle.kts
VoiceInputApp/.android/: analytics.settings
VoiceInputApp/app/: build.gradle.kts  proguard-rules.pro
VoiceInputApp/app/src/main/: AndroidManifest.xml
VoiceInputApp/app/src/main/cpp/cfc-cpp/: MultiThreadedDecoder.h  jni.cpp
VoiceInputApp/app/src/main/cpp/libcimbar/web/: index.html  main.js  recv.html
VoiceInputApp/app/src/main/java/com/voiceinput/: MainActivity.kt
VoiceInputApp/app/src/main/java/com/voiceinput/cimbar/: FileTransferScanActivity.kt  OpencvCamera2View.java  OpencvCameraView.java
VoiceInputApp/app/src/main/java/com/voiceinput/data/: AiAssistantFormatter.kt  AiAssistantReducer.kt  AiAssistantState.kt  AppRoutes.kt  ConfigManager.kt  ForegroundNotificationState.kt  HistoryAiScope.kt  HistoryExportFormatter.kt  HistoryListFilter.kt  InputHistoryScope.kt  NotificationAppSelectionState.kt  NotificationFilterRules.kt  NotificationHistoryFactory.kt  PairedDeviceUiState.kt  RelayAckState.kt
VoiceInputApp/app/src/main/java/com/voiceinput/network/: NetworkManager.kt  ServerConnection.kt  TcpConnection.kt  UdpDiscovery.kt  UnsafeOkHttpClient.kt
VoiceInputApp/app/src/main/java/com/voiceinput/service/: NotificationForwarding.kt  NotificationListenerService.kt  VoiceInputForegroundService.kt
VoiceInputApp/app/src/main/java/com/voiceinput/update/: AppUpdateManager.kt
VoiceInputApp/app/src/main/java/com/voiceinput/util/: EncryptionUtil.kt  FileTransferCodec.kt  ImageTransferCodec.kt
VoiceInputApp/app/src/main/java/com/voiceinput/viewmodel/: InputViewModel.kt
VoiceInputApp/app/src/main/res/drawable/: progress_transfer.xml
VoiceInputApp/app/src/main/res/layout/: activity_file_transfer_scan.xml
VoiceInputApp/app/src/main/res/values/: strings.xml  themes.xml
VoiceInputApp/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
VoiceInputApp/app/src/test/java/com/voiceinput/data/: AiAssistantFormatterTest.kt  AiAssistantReducerTest.kt  AppRoutesTest.kt  ForegroundNotificationStateTest.kt  HistoryAiScopeTest.kt  RelayAckStateTest.kt  (+7 more)
VoiceInputApp/opencv-lite/: build.gradle
voice-input-desktop/: package-lock.json  package.json
voice-input-desktop/src/: ai-assistant.js  ai-assistant.test.js  connection.js  connection.test.js  history.js  history.test.js  index.html  main.js  reports.js  reports.test.js  settings.js  settings.test.js  styles.css  ui-state.js  ui-state.test.js
voice-input-desktop/src-tauri/: Cargo.toml  cert.pem  tauri.conf.json
voice-input-desktop/src-tauri/capabilities/: default.json
voice-input-desktop/src-tauri/icons/: README.md  generate_ico.py  generate_icons.py  icon.icns
voice-input-desktop/src-tauri/src/: crypto.rs  main.rs  reporting.rs  update.rs
voice-input-desktop/src-tauri/src/input/: mod.rs  simulator.rs
voice-input-desktop/src-tauri/src/network/: connection.rs  discovery.rs  mod.rs  protocol.rs  websocket.rs
voice-input-desktop/src-tauri/src/pairing/: manager.rs
voice-input-desktop/src-tauri/src/storage/: ai.rs  config.rs  history.rs  mod.rs
voice-input-file-qr-gui/: CMakeLists.txt  README.md  package-linux-portable.sh
voice-input-file-qr-gui/src/: main.cpp  qr_encoder_backend.cpp  qr_encoder_backend.h
voice-input-server/: Cargo.toml  cert.pem  export_cert.cs  generate_cert.py  generate_cert_ps.ps1  generate_cert_win.py  key.pem  key_traditional.pem  package.json  pairings.db  server.p12  server.pfx  sync_updates.py
voice-input-server/src/: crypto.rs  db.rs  device_manager.rs  main.rs  protocol.rs  updates.rs
voice-input-server/tools/file-qr-generator/: 语传文件二维码生成工具.html
voice-input-server/updates/stable/: manifest.json
(+24 files in other folders)
