[package]
name = "voice-input-desktop"
version = "1.0.0"
description = "跨平台语音输入桌面客户端"
authors = ["Voice Input Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.25", features = ["__rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
enigo = "0.2"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
dirs = "5.0"
lazy_static = "1.4"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
anyhow = "1.0"
futures-util = "0.3"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
